Mon Feb 25 04:59:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-execution-paths.sql:
        
          cuts.select_execution_path_cumulative () now returns the name
          of the path in the result set.

Sun Feb 24 00:58:56 UTC 2008  James H. Hill  <hillj@isis.vanderiblt.edu>

        * etc/SQL/CUTS-deployment.sql:
        * etc/SQL/CUTS-execution-paths.sql:
        * etc/SQL/CUTS-performance.sql:

          Implemented new stored procedures to data minining process.

Fri Feb 22 17:05:42 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-deployment.sql:

          Bug fix where the foreign key (test_number) prevented
          the deletion of a test because its ON DELETE was set to
          RESTRICT instead of CASCADE.

Fri Feb 22 15:12:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:
        * etc/SQL/CUTS-performance.sql:

          Re-implemented the stored procedures that calculate a
          component instance's cumulative, delta, and percentage
          error.

Thu Feb 21 20:22:45 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/utils:

          Location of MDE utilities for CUTS.

Thu Feb 21 07:13:08 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/install.dat:

          Removed this file.

Thu Feb 21 07:09:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/modelin/picmlin.mpc:
        * etc/config/cuts_gme.mpb:

          Fixed the static build of the CUTS connector.

Thu Feb 21 06:25:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/modelin/picmlin.mwc:

          New workspace for building the CUTS connector for NAOMI. This
          build uses static versions of its dependencies, i.e., ACE and
          GME.

Thu Feb 21 06:03:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS.mwc: